--- a/findly-builder/src/assets/web-kore-sdk/demo/findly/findly-sdk.css
+++ b/findly-builder/src/assets/web-kore-sdk/demo/findly/findly-sdk.css
@@ -7365,7 +7365,7 @@ body{
 }
 .searchAssist-kore-chat-window.search-container.conversation .search-body .livesearchResultsNotFound{
     text-align: center;
-    padding:116px 0px;
+    padding:102px 0px;
     color: #9aa0a6;
 }
 .searchAssist-kore-chat-window.search-container.conversation #autoSuggestionContainer .suggestion-search-data-parent .noquerySuggestionsFound{
@@ -7384,6 +7384,7 @@ color: #9aa0a6;
     width: auto !important;
     /* padding: 20px; */
     padding: 0px;
+    padding-top: 20px;
     height: auto;
     box-shadow: 0px 2px 5px rgba(32, 33, 36, 0.2);
     box-sizing:border-box;
@@ -11460,7 +11461,7 @@ button.purejscarousel-btn.purejscarousel-btn-next.fa.fa-sort-asc::after {
     background: linear-gradient(270deg, #FFFFFF 0%, #FFFFFF 0.01%, rgba(255, 255, 255, 0) 100%);
     width: 100px;
     height: 135px;
-    right: -1px;
+    right: -15px;
     z-index: 0;
     top: -55px;
     opacity: 1;
@@ -11474,7 +11475,7 @@ button.purejscarousel-btn.purejscarousel-btn-prev.fa.fa-sort-asc::after {
     background: linear-gradient(90deg, #FFFFFF 0%, #FFFFFF 0.01%, rgba(255, 255, 255, 0) 100%);
     width: 100px;
     height: 135px;
-    left: 3px;
+    left: -17px;
     z-index: 0;
     top: -55px;
     opacity: 1;
@@ -13834,8 +13835,8 @@ border: 0;
 
     border: 0;
     padding: 20px;
-    max-height: 200px;
-    min-height: 200px;
+    max-height: 166px;
+    min-height: 166px;
     overflow: auto;
     border-radius: 6px;
     background: #FFFFFF;
@@ -14101,6 +14102,10 @@ border: 0;
     position: absolute;
     right: 20px;
     cursor: pointer;
+    color: #5F6368;
+    line-height: 14px;
+    font-size: 14px;
+    padding-top: 10px;
 }
 .searchAssist-kore-chat-window .sdk-clear-all-facet-top{
     color: var(--sdk-primary-blue-color);
@@ -14880,3 +14885,21 @@ margin-bottom: 15px !important;
    height: 1rem;
    background: white;
  }
+ /* .live-seach-auto-suggestion-parent{
+    position: absolute;
+    width: 100%;
+    height: calc(100% - 101px);
+    bottom: 40px;
+    background: rgba(32,33,36,0.4);
+    border-radius: 6px;
+    z-index: 1;
+   } */
+  .parent-search-live-auto-suggesition{
+    position: absolute;
+    width: 100%;
+    height: calc(100% - 101px);
+    bottom: 40px;
+    background: rgba(32,33,36,0.4);
+    border-radius: 6px;
+    z-index: 1;
+    }
